hphp/hack/test/typecheck/foreach_ref2.php.exp
File "foreach_ref2.php", line 5, characters 26-30:
Binding a reference in an array is no longer supported in Hack. (Typing[4225])
